--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "firebase-admin": "^6.5.0",
     "firebase-functions": "^2.1.0",
     "htm": "^2.0.0",
+    "match-sorter": "^2.3.0",
     "preact": "^8.4.2",
     "preact-render-to-string": "^4.1.0",
     "pug": "^2.0.3"
